--- a/cldf/requirements.txt
+++ b/cldf/requirements.txt
@@ -1,4 +1,5 @@
 appdirs==1.4.3
+bs4==0.0.1
 certifi==2019.11.28
 chardet==3.0.4
 cldfbench==1.2.2
@@ -12,6 +13,7 @@ idna==2.9
 isodate==0.6.0
 jdcal==1.4.1
 lingpy==2.6.6
+lingrex==0.1.3
 Markdown==3.2.1
 networkx==2.2
 newick==1.0.0
@@ -33,11 +35,14 @@ regex==2020.2.20
 requests==2.23.0
 rfc3986==1.3.2
 segments==2.1.3
+sinopy==0.3.4
 six==1.14.0
 smmap==3.0.1
+soupsieve==2.0
 SQLAlchemy==1.3.15
 tabulate==0.8.7
 termcolor==1.1.0
+texttable==1.6.2
 tqdm==4.44.1
 uritemplate==3.0.1
 urllib3==1.25.8
