--- a/cldf/requirements.txt
+++ b/cldf/requirements.txt
@@ -2,7 +2,7 @@ appdirs==1.4.3
 bs4==0.0.1
 certifi==2019.11.28
 chardet==3.0.4
-cldfbench==1.2.2
+cldfbench==1.0.2
 cldfcatalog==1.3.0
 clldutils==3.5.0
 colorlog==4.1.0
@@ -13,39 +13,40 @@ idna==2.9
 isodate==0.6.0
 jdcal==1.4.1
 lingpy==2.6.6
-lingrex==0.1.3
+lingrex==0.1.2
 Markdown==3.2.1
 networkx==2.2
 newick==1.0.0
-numpy==1.18.2
+numpy==1.18.1
 openpyxl==3.0.3
 packaging==20.3
 pluggy==0.13.1
 purl==1.5
 py==1.8.1
 pybtex==0.22.2
-pycldf==1.14.1
+pycldf==1.13.0
 pyclts==2.0.0
-pyconcepticon==2.6.0
+pyconcepticon==2.5.1
 pycountry==19.8.18
-pyglottolog==3.1.0
--e git+https://github.com/lexibank/pylexibank.git@1e4a2f54afe7aee2e613f9c4bcb36f7d79f422fc#egg=pylexibank
-pytest==5.4.1
+pyglottolog==3.0.0
+pylexibank==2.6.0
+pytest==5.3.5
 regex==2020.2.20
 requests==2.23.0
 rfc3986==1.3.2
+scipy==1.4.1
 segments==2.1.3
 sinopy==0.3.4
 six==1.14.0
 smmap==3.0.1
 soupsieve==2.0
-SQLAlchemy==1.3.15
-tabulate==0.8.7
+SQLAlchemy==1.3.13
+tabulate==0.8.6
 termcolor==1.1.0
 texttable==1.6.2
-tqdm==4.44.1
+tqdm==4.43.0
 uritemplate==3.0.1
 urllib3==1.25.8
-wcwidth==0.1.9
+wcwidth==0.1.8
 xlrd==1.2.0
 zipp==3.1.0
